# DNSrelay

./: README.md
upload/: CMakeLists.txt  default.h  header.h  main.c
upload/DNSHandle/: DNSHandle.c  DNSHandle.h  IdConversion.c  IdConversion.h  dns_message.c  dns_message.h
upload/Debug/: debug.c  debug.h
upload/Initialization/: dnsrelay.txt  io.c  io.h  multiThread.c  multiThread.h
upload/Log/: log.txt
upload/LookUp/: data_struct.c  data_struct.h
upload/Platform/: platformSocket.c  platformSocket.h  platformThread.c  platformThread.h
